Fisrt version Resume

--- a/angular.json
+++ b/angular.json
@@ -122,6 +122,12 @@
             }
           }
         }
+      },
+      "i18n": {
+        "sourceLocale": "en",
+        "locales": {
+          "es": "src/locale/messages.es.xlf"
+        }
       }
     }},
   "defaultProject": "angular-seed"
