Fix config hosting

--- a/firebase.json
+++ b/firebase.json
@@ -8,11 +8,11 @@
     ],
     "rewrites": [
       {
-        "source": "es/**",
-        "destination": "es/index.html"
+        "source": "/es/**",
+        "destination": "/es/index.html"
       } , {
-        "source": "en/**",
-        "destination": "en/index.html"
+        "source": "/en/**",
+        "destination": "/en/index.html"
       }
     ],
     "redirects" : [
